--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Library for diffing paths to obtain relative paths"
 documentation = "https://docs.rs/pathdiff/"
 repository = "https://github.com/Manishearth/pathdiff"
 keywords = ["path", "relative"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 
 [package.metadata.docs.rs]
 all-features = true
